update UI and add overridePendingTransition

--- a/app/src/main/res/layout/activity_create_pwd.xml
+++ b/app/src/main/res/layout/activity_create_pwd.xml
@@ -4,49 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.activity.CreatePwdActivity"
+    android:background="@color/transparent"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="226dp"
-        android:background="#2DAC7C">
-
-        <ImageView
-            android:id="@+id/btn_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:adjustViewBounds="true"
-            android:padding="10dp"
-            android:src="@drawable/ic_back_2"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_toRightOf="@+id/btn_back"
-            android:gravity="center"
-            android:text="应用锁"
-            android:textColor="@color/white"
-            android:textSize="14sp"/>
-
-        <ImageView
-            android:id="@+id/lock_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_lock"/>
+        android:layout_height="226dp">
 
         <TextView
             android:id="@+id/lock_tip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/lock_icon"
             android:layout_marginTop="10dp"
             android:gravity="center"
+            android:layout_centerVertical="true"
             android:text="欢迎使用应用锁"
             android:textColor="@color/white"
-            android:textSize="14sp"/>
+            android:textSize="25sp"/>
     </RelativeLayout>
 
     <!--图形锁-->
@@ -66,6 +41,6 @@
         android:gravity="center"
         android:text="重置"
         android:layout_marginBottom="10dp"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
 
 </LinearLayout>
