--- a/app/src/main/res/layout/activity_create_pwd.xml
+++ b/app/src/main/res/layout/activity_create_pwd.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:layout_centerVertical="true"
-            android:text="欢迎使用应用锁"
+            android:text="@string/lock_tip_create_pwd"
             android:textColor="@color/white"
             android:textSize="25sp"/>
     </RelativeLayout>
