--- a/app/src/main/res/layout/activity_password_unlock.xml
+++ b/app/src/main/res/layout/activity_password_unlock.xml
@@ -33,20 +33,33 @@
         android:id="@+id/unlock_tip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/unlock_pattern_view"
-        android:layout_marginBottom="30dp"
+        android:layout_above="@+id/unlock_pattern_l"
+        android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:visibility="visible"/>
 
+    <LinearLayout
+        android:id="@+id/unlock_pattern_l"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:orientation="vertical">
     <com.miki.applock.view.widget.LockPatternView
         android:id="@+id/unlock_pattern_view"
         android:layout_width="280.0dip"
         android:layout_height="280.0dip"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="80dp"/>
+        android:layout_gravity="center_horizontal" />
 
+    <ViewStub
+        android:id="@+id/finger_view"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout="@layout/fingerprint"
+        />
+    </LinearLayout>
 </RelativeLayout>
