--- a/app/src/main/res/layout/activity_password_unlock.xml
+++ b/app/src/main/res/layout/activity_password_unlock.xml
@@ -48,7 +48,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
         android:orientation="vertical">
-    <com.miki.applock.view.widget.LockPatternView
+    <com.miki.settings.applock.view.widget.LockPatternView
         android:id="@+id/unlock_pattern_view"
         android:layout_width="280.0dip"
         android:layout_height="280.0dip"
